// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-control-group wp-components-stepper css-1963nm1"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-1gbtsah"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex css-m9tbel"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-nlyp56"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-19py40s"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-sa8ve7"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex css-m9tbel"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-nlyp56"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-flex wp-components-control-group wp-components-stepper css-1963nm1"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-1wafirv"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex css-m9tbel"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-nlyp56"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-19py40s"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-1qoyrq9"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex css-m9tbel"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-nlyp56"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render vertically 1`] = `
<div
  class="wp-components-flex wp-components-control-group wp-components-stepper css-ndwrt9"
  data-g2-c16t="true"
  data-g2-component="Stepper"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1j3zl9k"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-nw23x4"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex css-m9tbel"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-nlyp56"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="18 15 12 9 6 15"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-bkn53v"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="wp-components-base-button wp-components-button css-nfvzjn"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="StepperButton"
      data-icon="true"
      type="button"
    >
      <span
        class="wp-components-flex css-m9tbel"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item css-nlyp56"
          data-g2-c16t="true"
          data-g2-component="ButtonIcon"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </span>
      </span>
      <span
        class="wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
